--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/fetch_fields.html
@@ -28,14 +28,9 @@
       <option value="2" {% if fields_value == 2 %}selected{% endif %} >{% trans "No" %}</option>
     </select>
 
-    {% elif fields_type == "datetime" %}
-    <label>{% now "jS F Y H:i" %}</label>
-   
 
     <div class="medium-3 columns end">
-    {% elif fields_type == "datetime.datetime" %}
-    <label>{% now "jS F Y H:i" %}</label>
-
+    {% elif fields_type == "datetime.datetime" or fields_type == "datetime" %}
     <input id="{{fields_name}}" class="date_month_day_year" type="text" placeholder="DD/MM/YYYY" value="" name="{{fields_name}}" readonly="" >
 
     </div>
@@ -45,6 +40,9 @@
         {% if start_time %}
             var start_date  = document.getElementById("start_date");
             start_date.value = "{{start_time|date:'d/m/Y'}}";
+        {% elif end_time %}
+            var end_date  = document.getElementById("end_date");
+            end_date.value = "{{end_time|date:'d/m/Y'}}";
         {% endif %}
     })
 
@@ -149,8 +147,6 @@
       },
     });
 
-
-
     </script>
 
 
@@ -161,20 +157,129 @@
       <option value="HIDDEN" {% if fields_value == "HIDDEN" %}selected{% endif %} >{% trans "HIDDEN" %}</option>
     </select>
 
-    {% elif fields_type == "int" %}
+    {% elif fields_type == "int" or fields_type == "float" or fields_type == "long" %}
     <div style="display:table-cell;">
       <font size="3"> <input type="number" name="{{fields_name}}" value="{{fields_value|default_if_none:''}}"></font>
     </div>
 
     {% elif fields_type == "list" %}
-    <div id="list_drawer" style="border-spacing:0px" class="list_drawer">
-        
+    <div id="{{fields_name}}" style="border-spacing:0px" class="list_drawer">
+      {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
     </div>
+
+    {% elif fields_type == "dict" %}
+    <div id="{{fields_name}}" style="border-spacing:0px" class="dict_drawer">
+      {% include 'ndf/widget_selector.html' with for=fields_name all_options="" selected_options="" %}
+    </div>
+
+    {% elif fields_type == "IS()" %}
+    <div id="is_drawer" style="border-spacing:0px" class="list_drawer">
+      <select name="{{fields_name}}">
+        <option value="">select</option>
+        {% for value in complex_dt %}
+        <option value="{{value}}"> {{value}} </option>
+        {% endfor %}
+      </select>
+    </div>
+      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    {% elif fields_type == "unicode" or fields_type == "basestring" %}
+
+      {% if fields_name == "Location" %}
+
+        <div class="row">
+          <div class="large-8 columns">
+              <a href="#view-map-edit-widget" data-reveal-id="view-map-edit-widget" title="Click to add location markers" class="tiny secondary button radius expand">
+              <i class="fi-marker"></i> &nbsp; {% trans "Add Location" %}
+              </a>
+          </div>
+        </div>
+        <div class="content reveal-modal graph-div" id="view-map-edit-widget" data-reveal>    
+          <!-- #{#% #if '/edit/' in request.path  or '/image_detail/' in request.path  or '/video_detail/' in request.path%} -->
+            <a class="close-reveal-modal" >&#215;</a>
+            {% include "ndf/map_widget.html" with mode="edit" %}
+            <!-- <div style="background-color:gray; width:100%; height:80%;"></div> -->
+          <!-- #{#%# endif %} -->
+        </div>
+
+        <script type="text/javascript">
+            $(document).on('open', '#view-map-edit-widget[data-reveal]', function () {  
+    
+              $.ajax({
+                url: "{% url 'get_visited_location' groupid %}",
+                success: function(data){ 
+           
+                  data = JSON.parse(data);
+
+                  var lastVisitedLocationVal = data;
+                  
+                  if(lastVisitedLocationVal){
+
+                    if(lastVisitedLocationVal == "[]"){
+                      lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
+                    }
+
+                    if(lastVisitedLocationVal.length > 0){
+                          // lastVisitedLocationVal = JSON.parse(lastVisitedLocationVal);
+                          var zoom = lastVisitedLocationVal.pop(),
+                              lng = lastVisitedLocationVal[1],
+                              lat = lastVisitedLocationVal[0];
+                            map.setView([lat, lng], zoom);
+                          }
+                  }
+                  else if( tempArr.length )
+                  {
+                    var group = new L.featureGroup(tempArr)
+                        map.fitBounds(group.getBounds());
+                  }
+                 
+              }
+            });
+
+            });
+        $(document).on('opened', '#view-map-edit-widget[data-reveal]', function () {  
+        
+          map.invalidateSize();  
+        });
+
+        </script>
+
+
+
+      {% else %}
+      <input type="text" id="{{fields_name}}" name="{{fields_name}}"   />
+      
+      {% endif %}
 
 
 
 
     {% endif %}
+
+
 
 {# {{ fields_name }} #}
 {# {{ fields_type }} #}
