--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -113,6 +113,9 @@
   {% endfor %}
 
   <div class="row">
+
+    {% get_download_filename node as download_filename %}
+    <a href="{% url 'read_file' group_name_tag node.pk download_filename %}">sample filehive download link</a>
     {% if topic %}
       {% get_filters_data "Topics" as filter_dict %}
 
