diff view for create collection and add-to-collection

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -104,7 +104,7 @@
                 
                     <div class="small-12 medium-10 columns gallery-actions" >
                         <div class="create-note">
-                         <a   style="margin: 0em 0em 1em;">
+                         <a style="margin: 0em 0em 1em;">
                             <i class="fi-page-edit"></i>
                             <span> Create note</span>
                         </a>
@@ -113,16 +113,16 @@
                             <i class="fi-folder"></i>
                             <span> Create new collection</span>
                         </div>
-                        <div class = "parent-folder">
+                        <div class ="add-to-collection">
                             <i class="fa fa-plus"></i>
                             <span>Add to collection</span>
                         </div>
-                        <div class="download-file">
+                        <div class="download-file hide">
                             <i class="fi-download"></i>
                             <span> Download</span>
                         </div>
-                        <div>
-                            <i class="fi-info"></i>
+                        <div class="hide">
+                            <i class="fi-info "></i>
                             <span>View info</span>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
             <div class="gallery-body small-12 columns">
                 <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-5 gallery-body-ul">
                 
-                {% for each_img in coll_file_cur %}
+                {% for each_img in files_cur %}
                     <li class="card-image-wrapper gallery-img" id="{{each_img.pk}}" style="margin-top:13px;margin-left:-10px">
                         {% include 'ndf/simple_card.html' with resource=each_img  no_footer=True no_description=True url_name=file_detail_url first_arg=group_id second_arg=each_img.pk %}
                     </li>
@@ -234,7 +234,7 @@
      $(document).on('change','.filenode',function(){
 
         var checked = $('.filenode:checked').length;
-        if (checked){
+        if (checked>1){
           $(".collection-area").css("display", "block");          
         }
         else{
@@ -245,14 +245,44 @@
 
     $('.create-collection').click(function() {
         var checked = $('.filenode:checked').length;
-        
+        var is_create_collection = "True";
         if (checked){
           $.ajax({
             type: "GET",
             url: "{% url 'course_create_collection' group_id %}",
             datatype: "html",
             data:{
-              
+              'is_create_collection':is_create_collection,
+            },
+            success: function(data) {
+                $("#create_collection_model").html(data);
+                $("#create_collection_model").foundation('reveal', 'open');
+              // location.href = "{% url 'course_gallery' group_id %}";
+
+            }
+          });          
+        }
+        
+        else{
+          alert("Select atleast 1 resource");
+
+        
+        }
+          
+    });
+
+
+
+    $('.add-to-collection').click(function() {
+        var checked = $('.filenode:checked').length;
+        var is_add_to_collection = "True";
+        if (checked){
+          $.ajax({
+            type: "GET",
+            url: "{% url 'course_create_collection' group_id %}",
+            datatype: "html",
+            data:{
+              'is_add_to_collection':is_add_to_collection,
             },
             success: function(data) {
                 $("#create_collection_model").html(data);
@@ -272,23 +302,15 @@
     });
 
   $(".create-note").click(function(){
-    // var checked = $('.filenode:checked').length;
+    var checked = $('.filenode:checked').length;
     var coll_list= " ";
     var url_list = " ";
     var audio_list = " ";
     $('.filenode:checked').each(function() {
-        curr_obj = $(this).attr("value");
-        // alert("{% url 'page_create_edit' group_name_tag %}?course_event_id={{group_id}}&blog_type=True");
-        // alert("{{group_id}}");
+        // curr_obj = $(this).attr("value");
+    
         url_list = $(this).closest('.scard-container').find('img').attr('src');
         coll_list = coll_list + url_list + ",";
-
-        audio_list = $(this).closest('.scard-container').find('i').attr('class');
-        if(audio_list == "audio mpeg"){
-            // audio_list = "/"+{{group_id}}+"/file/readdoc/";
-        }
-        
-            // uri= "{% url 'page_create_edit' group_name_tag %}?course_event_id={{group_id}}&blog_type=True&my="+url;
       
       });
           $.ajax({
