--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_create_note.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_create_note.html
@@ -1,10 +1,7 @@
 {% load i18n %}
 {% load ndf_tags %}
-<input type="button" id="add_res_to_ck">
-	
-</input>
 <div class ="small-12 large-12 columns">
-          <h5>Add New Page:</h5> {{group_id}}
+          <h5>Add New Page:</h5> 
 </div>
 
 <div class="small-12 columns">
@@ -164,6 +161,7 @@
          	content_org:content_val,
           },
           success: function(data) {
+          		location.reload();
           }
         });
       }
