--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -2007,13 +2007,89 @@ div.show-image:hover div.fullscreen-icon{
         }
     }
 }
+  /* Large desktop */
+@media (min-width: 34em ) {
+  .container {
+    max-width: 34rem;
+    margin: 0px auto;
+  }
+}
 
+  /* Large desktop */
+@media (min-width: 48em ) {
+  .container {
+    max-width: 45rem;
+    margin: 0px auto;
+  }
+}
+
+  /* Large desktop */
+@media (min-width: 62em ) {
+  .container {
+    max-width: 60rem;
+    margin: 0px auto;
+  }
+}
+
+  /* Large desktop */
+@media (min-width: 75em) {
+  .container {
+    max-width: 72.25rem;
+    margin: 0px auto;
+  }
+}
+$course-envelop-height: 250px;
+$course-envelop-color: #fff;
 #envelop-cover {
-  .course-page-title {
+  background: #9900ff;
+  height: $course-envelop-height;
+
+  .course-page-header {
     font-size: 35px;
     font-weight: 500;
     padding-right: 0.3em;
     padding-left: 0.3em;
+    position: relative;
+    height: $course-envelop-height;
+    color: $course-envelop-color;
+
+    label {
+      color: $course-envelop-color;
+    }
+
+    .course-header-background, .course-header-background-layer {
+      position: absolute;
+      left: 0px;
+      right: 0px;
+      top: 0px;
+      bottom: 0px;
+      height: $course-envelop-height;
+      img {
+        width: 100%;
+        height: $course-envelop-height;
+      }
+    }
+
+    .course-header-background-layer {
+      background-color: rgba(0, 0, 0, 0.5);
+      opacity: 0.6;
+    }
+
+    .course-settings {
+      margin-left: 15px;
+      a {
+        &:first-child {
+          background: rgba(50,50,50, 0.5);
+          padding: 7px 12px;
+          color: #fff;
+          border: 1px solid #999;
+          font-size: 12px;
+          margin: 0px;
+        }
+        font-size: 15px;
+        color: #737373;
+      }
+    }
 
     span {
       a {
@@ -2056,6 +2132,47 @@ div.show-image:hover div.fullscreen-icon{
         font-size: 13px;
         font-weight: 300;
         color: #000;
+      }
+    }
+  }
+  .course-tabs {
+    border: 0 solid silver;
+    border-width: 0px 0px 0px 0px;
+    margin-left: 1em;
+    text-align:center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+
+    .tab-title {
+      border: 0 solid silver;
+      border-width: 0 0 0px 0px;
+      background: #DEDEDE;
+      border-radius: 10px 10px 0px 0px;
+      margin-right: 0.4em;
+      float: none !important;
+      display: inline-block;
+
+      a {
+        color: #2B91EA;
+        border-radius: inherit;
+        margin: 0px 4px;
+        font-size: 15px;
+        letter-spacing: -0.3px;
+      }
+
+      &.active {
+        border-width: 0px 0px 0px 0px;
+        background: #FFFFFF;
+        a {
+          color: #000;
+        }
+      }
+
+      &.dummy-tab {
+
       }
     }
   }
@@ -2115,43 +2232,6 @@ div.show-image:hover div.fullscreen-icon{
 
 #envelop-content{
   margin-top: 20px;
-
-  .course-tabs {
-    border: 0 solid silver;
-    border-width: 0px 0px 0px 0px;
-    margin-left: 1em;
-    text-align:center;
-
-    .tab-title {
-      border: 0 solid silver;
-      border-width: 0 0 0px 0px;
-      background: #DEDEDE;
-      border-radius: 10px 10px 0px 0px;
-      margin-right: 0.4em;
-      float: none !important;
-      display: inline-block;
-
-      a {
-        color: #2B91EA;
-        border-radius: inherit;
-        margin: 0px 4px;
-        font-size: 15px;
-        letter-spacing: -0.3px;
-      }
-
-      &.active {
-        border-width: 0px 0px 0px 0px;
-        background: #FFFFFF;
-        a {
-          color: #000;
-        }
-      }
-
-      &.dummy-tab {
-
-      }
-    }
-  }
   /* For accordian in the mobile view*/
 
   .accordion {
